Enhance match input helper and tournament setup
- Added functionality to handle cases where all player inputs are blank, allowing for team-only submissions in団体戦モード.
- Improved player data collection by ensuring that only non-blank fields are included in the temporary ID generation.
- Updated team data logging to provide insights into the loaded team prefecture map.
- Introduced a category variable for tournament matches to standardize entry data.
- Added console logging for initial player data loading to track the number of players loaded.

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -36,6 +36,9 @@
         const initScore1 = initScore;
         const initScore2 = initScore;
 
+        // カテゴリ
+        const category = 'doubles';
+
         // パッキン用ダミーペア
         const byePlayer = { id: "bye", name: "1回戦免除", information: [] };
 
@@ -433,6 +436,7 @@
                     },
                     entryNo: match.p1.id,
                     name: match.p1.name,
+                    category: category,
                 });
             }
 
@@ -448,6 +452,7 @@
                     },
                     entryNo: match.p2.id,
                     name: match.p2.name,
+                    category: category,
                 });
             }
 
