--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -307,6 +307,8 @@
         function updateJsonOutput() {
             const useRoundNames = document.getElementById("roundNameToggle").checked;
             const output = {};
+            const resultSummary = [];
+            const seenTeams = new Set();
 
             const roundCount = roundHistory.length;
 
@@ -344,41 +346,81 @@
             // resultSummary を先に生成（必要な場合）
             if (useRoundNames) {
                 const resultSummary = [];
+                const seenTeams = new Set();
+
+                // 個人戦の結果を抽出
+                // for (let i = roundCount - 1; i >= 0; i--) {
+                //     const matches = roundHistory[i].matches;
+                //     const ranking = roundRankings[i];
+                //     if (!ranking) continue;
+
+                //     for (const match of matches) {
+                //         if (!match.p1 || !match.p2 || !match.winner) continue;
+
+                //         const p1Key = getPairKey(match.p1);
+                //         const p2Key = getPairKey(match.p2);
+                //         console.log(`${p1Key},  ${p2Key}`)
+                //         const p1Array = getPairArray(match.p1);
+                //         const p2Array = getPairArray(match.p2);
+                //         if (!p1Key || !p2Key) continue;
+
+                //         const isP1Winner = match.winner === match.p1.id;
+                //         const winnerKey = isP1Winner ? p1Key : p2Key;
+                //         const loserKey = isP1Winner ? p2Key : p1Key;
+                //         const winnerArray = isP1Winner ? p1Array : p2Array;
+                //         const loserArray = isP1Winner ? p2Array : p1Array;
+
+                //         if (ranking.winner && !resultPairs.has(winnerKey) && isValidPair(winnerArray)) {
+                //             resultSummary.push({
+                //                 playerIds: winnerArray,
+                //                 result: ranking.winner,
+                //             });
+                //             resultPairs.add(winnerKey);
+                //         }
+                //         if (ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
+                //             resultSummary.push({
+                //                 playerIds: loserArray,
+                //                 result: ranking.loser,
+                //             });
+                //             resultPairs.add(loserKey);
+                //         }
+                //     }
+                // }
+
+                // 団体戦の結果を抽出
+                const teamRankingLabels = {
+                    [roundCount - 1]: { winner: "優勝", loser: "準優勝" },
+                    [roundCount - 2]: { loser: "ベスト4" },
+                    [roundCount - 3]: { loser: "ベスト8" },
+                };
 
                 for (let i = roundCount - 1; i >= 0; i--) {
                     const matches = roundHistory[i].matches;
-                    const ranking = roundRankings[i];
+                    const ranking = teamRankingLabels[i];
                     if (!ranking) continue;
 
                     for (const match of matches) {
-                        if (!match.p1 || !match.p2 || !match.winner) continue;
-
-                        const p1Key = getPairKey(match.p1);
-                        const p2Key = getPairKey(match.p2);
-                        console.log(`${p1Key},  ${p2Key}`)
-                        const p1Array = getPairArray(match.p1);
-                        const p2Array = getPairArray(match.p2);
-                        if (!p1Key || !p2Key) continue;
-
                         const isP1Winner = match.winner === match.p1.id;
-                        const winnerKey = isP1Winner ? p1Key : p2Key;
-                        const loserKey = isP1Winner ? p2Key : p1Key;
-                        const winnerArray = isP1Winner ? p1Array : p2Array;
-                        const loserArray = isP1Winner ? p2Array : p1Array;
 
-                        if (ranking.winner && !resultPairs.has(winnerKey) && isValidPair(winnerArray)) {
+                        const winnerTeam = isP1Winner ? match.p1 : match.p2;
+                        const loserTeam = isP1Winner ? match.p2 : match.p1;
+
+                        if (ranking.winner && !seenTeams.has(winnerTeam.id)) {
                             resultSummary.push({
-                                playerIds: winnerArray,
-                                result: ranking.winner,
+                                team: winnerTeam.team || winnerTeam.name,
+                                prefecture: winnerTeam.prefecture || "",
+                                result: ranking.winner
                             });
-                            resultPairs.add(winnerKey);
+                            seenTeams.add(winnerTeam.id);
                         }
-                        if (ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
+
+                        if (ranking.loser && !seenTeams.has(loserTeam.id)) {
                             resultSummary.push({
-                                playerIds: loserArray,
-                                result: ranking.loser,
+                                team: loserTeam.team || loserTeam.name,
+                                prefecture: loserTeam.prefecture || "",
+                                result: ranking.loser
                             });
-                            resultPairs.add(loserKey);
+                            seenTeams.add(loserTeam.id);
                         }
                     }
                 }
@@ -397,7 +439,10 @@
                     const matchWithRound = structuredClone(match);
                     matchWithRound.round = roundLabel;
 
-                    const splitMatches = splitMatchByPlayerIds(matchWithRound);
+                    // 団体戦
+                    const splitMatches = splitMatchByTeams(matchWithRound);
+                    // 個人戦
+                    // const splitMatches = splitMatchByPlayerIds(matchWithRound);
                     output.matches.push(...splitMatches);
                 }
             }
@@ -455,6 +500,49 @@
                     category: category,
                 });
             }
+
+            return results;
+        }
+
+        function splitMatchByTeams(match) {
+            if (match.p1.id === 'bye' || match.p2.id === 'bye') return [];
+
+            const results = [];
+
+            const p1 = match.p1;
+            const p2 = match.p2;
+
+            const p1IsWinner = (match.winner === p1.id);
+            const p1Score = String(match.scores.p1);
+            const p2Score = String(match.scores.p2);
+
+            results.push({
+                round: match.round,
+                team: p1.team || p1.name,
+                opponent: p2.team || p2.name,
+                result: p1IsWinner ? "win" : "lose",
+                games: {
+                    won: p1Score,
+                    lost: p2Score
+                },
+                entryNo: p1.id,
+                name: p1.name,
+                category: "team"
+            });
+
+            results.push({
+                round: match.round,
+                team: p2.team || p2.name,
+                opponent: p1.team || p1.name,
+                result: p1IsWinner ? "lose" : "win",
+                games: {
+                    won: p2Score,
+                    lost: p1Score
+                },
+                entryNo: p2.id,
+                name: p2.name,
+                category: "team"
+            });
 
             return results;
         }
