Add initial player data for the 2024 high school championship tournament

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -32,12 +32,12 @@
     <script src="initialPlayer.js"></script>
     <script>
         // 初期スコア
-        const initScore = 4;
+        const initScore = 2;
         const initScore1 = initScore;
         const initScore2 = initScore;
 
         // カテゴリ
-        const category = 'doubles';
+        const category = 'team';
 
         // パッキン用ダミーペア
         const byePlayer = { id: "bye", name: "1回戦免除", information: [] };
