Add buildPairName function to format player names with team information

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -460,6 +460,30 @@
             document.getElementById("jsonOutput").value = JSON.stringify(output, null, 2);
         }
 
+        /**
+         * information 配列から
+         *  - 「lastName firstName(team)」形式
+         *  - 同一チームなら team は最後尾で 1 回だけ
+         * を生成する。
+         */
+        function buildPairName(information) {
+        // 選手名（姓名）を取り出す
+        const names = information.map(({ lastName, firstName }) => `${lastName} ${firstName}`);
+
+        // チームを重複なしで抽出
+        const teams = [...new Set(information.map(({ team }) => team).filter(Boolean))];
+
+        // 全員同じチームなら最後に 1 回だけ付ける
+        if (teams.length === 1) {
+            return `${names.join('・')}(${teams[0]})`;
+        }
+
+        // 異なるチームが混在する場合は個別に付ける
+        return information
+            .map(({ lastName, firstName, team }) => `${lastName} ${firstName}(${team})`)
+            .join('・');
+        }
+
         function splitMatchByPlayerIds(match) {
 
             if (match.p1.id === 'bye' || match.p2.id === 'bye') {
@@ -485,14 +509,11 @@
                 pair: p1Ids,
                 opponents: match.p2.information,
                 result: p1IsWinner ? "win" : "lose",
-                games: {
-                won: p1Score,
-                lost: p2Score
-                },
+                games: { won: p1Score, lost: p2Score },
                 entryNo: match.p1.id,
-                name: match.p1.name,
+                name: buildPairName(match.p1.information),  // 変更点
                 category: category,
-                retired: !!match.p1.retired // ←追加
+                retired: !!match.p1.retired
             });
             }
 
@@ -502,14 +523,11 @@
                 pair: p2Ids,
                 opponents: match.p1.information,
                 result: p1IsWinner ? "lose" : "win",
-                games: {
-                won: p2Score,
-                lost: p1Score
-                },
+                games: { won: p2Score, lost: p1Score },
                 entryNo: match.p2.id,
-                name: match.p2.name,
+                name: buildPairName(match.p2.information),  // 変更点
                 category: category,
-                retired: !!match.p2.retired // ←追加
+                retired: !!match.p2.retired
             });
             }
 
