fix: set default checked state for round name toggle checkbox

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -17,7 +17,7 @@
         <button id="setRoundBtn">変更</button>
     </div>
     <label>
-        <input type="checkbox" id="roundNameToggle">
+        <input type="checkbox" id="roundNameToggle" checked>
         決勝・準決勝の表記にする
     </label>
     <button onclick="onClickGenerate()">出力</button>
